Cleanup, customize and add 4 firsts posts

--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@ image: '/images/102.jpg'
 
 {% include section-tag.html %}
 
-{% include section-author.html %}
+<!-- {% include section-author.html %} -->
