--- a/videos/index.html
+++ b/videos/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Videos
-description: Commercials, Music Videos, Television, Film (Short and Feature length), TV News, Corporate video, and everything in between.
+description: Quand le text ne suffit pas, les vidéos sont là
 ---
 
 <!-- begin hero -->
