--- a/videos/index.html
+++ b/videos/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Videos
-description: Quand le text ne suffit pas, les vidéos sont là
+description: Quand le texte ne suffit pas, les vidéos sont là
 ---
 
 <!-- begin hero -->
